--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
 						<version>2.12.4</version>
 						<configuration>
 							<suiteXmlFiles>
-								<suiteXmlFile>testNG.xml</suiteXmlFile>
+								<suiteXmlFile>TestNG.xml</suiteXmlFile>
 							</suiteXmlFiles>
 						</configuration>
 					</plugin>
